--- a/src/pages/login/LoginPage.scss
+++ b/src/pages/login/LoginPage.scss
@@ -7,6 +7,9 @@
   align-items: center;
 
   &__img {
+    opacity: 0.5;
+    width: 100%;
+    height: 100%;
     position: absolute;
     top: 0;
     left: 0;
