--- a/src/components/design-system-components/labelInput/LabelInputComponent.scss
+++ b/src/components/design-system-components/labelInput/LabelInputComponent.scss
@@ -12,7 +12,7 @@
             outline: solid 2px var(--red1);
         }
 
-        &__error {
+        .label-input__error-message {
             padding-left: var(--spacing2);
             font-size: var(--font-size2);
         }
